# TuringMachineEmulator

./: MANIFEST.in  Makefile  README.md  gui.py  main.py  pyproject.toml  requirements.txt  setup.cfg  web.py
docs/: conf.py  constants.rst  gui.rst  index.rst  main.rst  modules.rst  tape.rst  turing_machine.rst
ru/LC_MESSAGES/: turing_machine.po
tests/: test_style.py  test_tape.py  test_turing_machine.py
turing_machine/: __main__.py  constants.py  gui.py  tape.py  turing_machine.py  web.py
turing_machine/web/upload/: turing.json
web/css/: styles.css
web/js/: turing_machine.js
