[metadata]
name = turing_machine
version = 0.0.2
author = Andrew Perminov, Oleg Petrov
description = Turing Machine Emulator
long_description = file: README.md
keywords = Turing machine
license = WTFPL
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Education
    License :: WTFPL License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =

[options.entry_points]
console_scripts =
    turing_machine = turing_machine.gui:main

[options.package_data]
turing_machine = */*/turing_machine.mo
