[metadata]
name = turing_machine
version = 0.0.12
author = Andrew Perminov, Oleg Petrov
description = Turing Machine Emulator
long_description = file: README.md
keywords = Turing machine
license = WTFPL
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Education
    License :: WTFPL License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    werkzeug
    flask

[options.entry_points]
console_scripts =
    turing_machine_gui = turing_machine.gui:main
    turing_machine_web = turing_machine.web:main

[options.package_data]
turing_machine = */*/*.mo, */*/*.js, */*/*.css, */*/*.json
